# stimstation

./: .gitignore  Cargo.toml  README.md  REFACTORING.md  simple_test  simple_test.rs
examples/: fibonacci_spiral.rs  fixed_induction_egui.rs  induction_egui.rs  pythagoras_macroquad.rs  pythagoras_plot.rs  ray_clock.rs  ray_pattern.rs  simple_proof.rs
examples/induction_egui_app/: Cargo.toml
examples/induction_egui_app/src/: main.rs
src/: Video.rs  app.rs  audio_handler.rs  audio_integration.rs  audio_playback.rs  fibonacci_spiral.rs  integration.rs  lib.rs  main.rs  menu.rs  mesmerise_circular.rs  particle_fountain.rs  physics.rs  pixel_utils.rs  pythagoras.rs  ray_pattern.rs  render.rs  rendering.rs  simple_proof.rs  sorter.rs  text_processor.rs  text_renderer.rs  text_rendering.rs  types.rs  visualizations.rs  world.rs
src/algorithms/: mod.rs  sorter.rs  sorter_manager.rs  tempCodeRunnerFile.rs
src/audio/: audio_download.rs  audio_handler.rs  audio_integration.rs  audio_playback.rs  download_progress.rs  mod.rs  white_noise.rs
src/core/: buffers.rs  fps.rs  integration.rs  mod.rs  orchestrator.rs  types.rs  world.rs
src/graphics/: mod.rs  pixel_utils.rs  ray_pattern.rs  render.rs
src/io/: mod.rs
src/io/audio/: handler.rs  integration.rs  mod.rs  playback.rs
src/physics/: detect_corner.rs  mod.rs  physics.rs
src/render/: drawing.rs  mod.rs
src/text/: mod.rs  text_processor.rs  text_rendering.rs
src/utils/: config.rs  mod.rs
src/visualizations/: common.rs
src/viz/: common.rs  mod.rs  pythagoras.rs
src/viz/circular/: mod.rs
src/viz/fibonacci/: mod.rs
src/viz/ray_pattern/: mod.rs
