[package]
name = "mesmerise"
version = "0.1.0"
edition = "2021"

[dependencies]
pixels = "0.15.0"
winit = "0.29.15"
winit_input_helper = "0.16.0"
rand = "0.8.5"
rodio = "0.20.1"
font-kit = "0.14.2"
ab_glyph = "0.2"
once_cell = "1.19"
plotters = { version = "0.3.7", optional = true }

# Visual proofs dependencies (excluding eframe)
macroquad = { version = "0.4.14", optional = true }
image = { version = "0.25.6", optional = true }

[features]
# Visual proofs features (without eframe)
visual-proofs = ["plotters", "macroquad", "image"]
default = []

[[example]]
name = "pythagoras_plot"
required-features = ["plotters"]

[[example]]
name = "pythagoras_macroquad"
required-features = ["macroquad"]

# induction_egui is now moved to its own crate in the workspace

[[example]]
name = "simple_proof"
# No dependencies needed for this example

[[example]]
name = "fibonacci_spiral"
# No dependencies needed for this example

[[example]]
name = "ray_clock"
required-features = ["macroquad"]

[[example]]
name = "ray_pattern"
required-features = ["image"]
