[package]
name = "mesmerise"
version = "0.1.0"
edition = "2021"

[lib]
name = "stimstation"
path = "src/lib.rs"

[[bin]]
name = "mesmerise"
path = "src/main.rs"

[dependencies]
pixels = "0.15.0"
winit = "0.29.15"
winit_input_helper = "0.16.0"
rand = "0.8.5"
rodio = "0.20.1"
font-kit = "0.14.2"
ab_glyph = "0.2"
once_cell = "1.19"
plotters = { version = "0.3.7", optional = true }

glam = "0.27.0"
palette = "0.7.3"
glyphon = "0.5.0"
rayon = "1.8.0"

macroquad = { version = "0.4.14", optional = true }
image = { version = "0.25.6", optional = true }

[features]
visual-proofs = ["plotters", "macroquad", "image"]
default = []
